--- a/clipstitch/package.json
+++ b/clipstitch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clipstitch-ai",
+  "name": "clipstitch-app",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -11,13 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.344.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "vite": "^5.1.6",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21"
   }
 }
