--- a/clipstitch/package.json
+++ b/clipstitch/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite": "^5.1.6",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21"
+    "vite": "^5.1.6"
   }
 }
